fix [HAAR-3711] Adjust visibility of cookie restriction overlay

--- a/src/components/cookie-message/cookie-message.scss
+++ b/src/components/cookie-message/cookie-message.scss
@@ -49,7 +49,6 @@ $cookie-message_button-pos-align: flex-start !default;
     &--shown {
         display: none;
         opacity: 1;
-        transform: translate3d(0, 0, 0);
         z-index: 202;
     }
 
